# Proyecto-Final

./: .gitignore  ComponentDialog.ui  QtProject.pro  README.md  componentdialog.h  componentdialog.ui  databasemanager.cpp
Component/: component.cpp  component.h
Database/: databasemanager.cpp  databasemanager.h
InventoryApp/: CMakeLists.txt  GUIA_PASO_A_PASO.md
InventoryApp/include/: Component.h  DatabaseManager.h  InventoryManager.h  MainWindow.h  ReportGenerator.h
InventoryApp/src/: Component.cpp  DatabaseManager.cpp  InventoryManager.cpp  MainWindow.cpp  ReportGenerator.cpp  main.cpp
Root Files/: QtProject.pro  main.cpp
UI/Component Dialog/: componentdialog.cpp
UI/Main Window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
